--- a/src/content/test.mdx
+++ b/src/content/test.mdx
@@ -1,8 +1,7 @@
 ---
 title: Test
-publishedAt: '2024-06-11'
-summary: 'This is a test page'
+publishedAt: "2024-06-11"
+summary: "This is a test page"
 ---
 
 This is a test page
-
